--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Hivesigner SDK",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ecency/hivesigner-sdk.git"
   },
-  "author": "",
+  "author": "Ildar Timerbaev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ecency/hivesigner-sdk/issues"
@@ -18,7 +19,9 @@
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
     "@types/node": "^14.14.28",
+    "jest": "^26.6.3",
     "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
