--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "test": "jest --passWithNoTests"
+    "test": "npx jest",
+    "lint": "eslint ./src/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
     "@types/node": "^14.14.28",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
