--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "sourceMap": true,
+    "moduleResolution": "node",
     "noImplicitAny": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "module": "es6",
     "target": "es5",
-    "jsx": "react",
-    "allowJs": true,
-    "sourceRoot": "src"
-  }
+    "allowJs": true
+  },
+  "exclude": ["spec"]
 }
