--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "typescript": "^4.1.5",
     "webpack": "^5.22.0",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "hive-uri": "^0.2.2"
   }
 }
