--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
+    "eslint-webpack-plugin": "^2.5.1",
     "jest": "^26.6.3",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
@@ -31,6 +32,7 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "cross-fetch": "^3.0.6",
     "hive-uri": "^0.2.2"
   }
 }
