--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "dsteem": "^0.11.3",
     "eslint": "^7.20.0",
     "eslint-webpack-plugin": "^2.5.1",
     "jest": "^26.6.3",
