--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
+    "@hiveio/dhive": "^0.14.12",
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "dsteem": "^0.11.3",
     "eslint": "^7.20.0",
     "eslint-webpack-plugin": "^2.5.1",
     "jest": "^26.6.3",
