--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
     "@hiveio/dhive": "^0.14.12",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
     "eslint-webpack-plugin": "^2.5.1",
     "jest": "^26.6.3",
+    "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
