--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hivesigner-sdk",
   "version": "1.0.0",
   "description": "Hivesigner SDK",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "build": "webpack --mode=production",
     "test": "npx jest",
