Remove type from package.json and change ts target

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "module": "es6",
+    "module": "commonjs",
     "target": "es5",
     "allowJs": true
   },
