--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hivesigner-sdk",
   "version": "1.0.0",
   "description": "Hivesigner SDK",
-  "main": "./src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "rimraf dist && tsc",
     "test": "npx jest",
     "lint": "eslint ./src/**/*.ts"
   },
@@ -20,22 +21,21 @@
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
     "@hiveio/dhive": "^0.14.12",
+    "@types/bytebuffer": "^5.0.42",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
-    "eslint-webpack-plugin": "^2.5.1",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.5",
-    "webpack": "^5.22.0",
-    "webpack-cli": "^4.5.0"
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "cross-fetch": "^3.0.6",
+    "dsteem": "^0.11.3",
     "hive-uri": "^0.2.2"
   }
 }
