--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "module": "commonjs",
+    "lib": ["es6"],
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "declaration": true
   },
-  "exclude": ["spec"]
+  "exclude": ["./**/*.spec.ts", "jest.config.js"]
 }
