--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && npm run build:node && npm run build:web",
+    "build:node": "tsc",
+    "build:web": "rollup -c",
     "test": "npx jest",
     "lint": "eslint ./src/**/*.ts"
   },
@@ -21,6 +23,7 @@
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
     "@hiveio/dhive": "^0.14.12",
+    "@rollup/plugin-typescript": "^8.2.0",
     "@types/bytebuffer": "^5.0.42",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
@@ -28,9 +31,12 @@
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
+    "rollup": "^2.39.0",
+    "rollup-plugin-babel-minify": "^10.0.0",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
   "dependencies": {
