--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "module": "commonjs",
-    "lib": ["es6"],
     "target": "es5",
-    "allowJs": true,
+    "allowJs": false,
     "declaration": true,
     "rootDir": "src"
   },
-  "exclude": ["./**/*.spec.ts", "jest.config.js", "rollup.config.js"]
+  "exclude": ["./**/*.spec.ts", "jest.config.js", "gulpfile.js"]
 }
