--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hivesigner-sdk",
+  "name": "hivesigner",
   "version": "1.0.0",
   "description": "Hivesigner SDK",
   "main": "dist/index.js",
