--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
-  "presets": ["@babel/env", "@babel/typescript"],
+  "presets": ["@babel/preset-env", "@babel/preset-typescript"],
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
   ]
 }
