--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hivesigner",
   "version": "3.2.4",
   "description": "Hivesigner SDK",
-  "main": "dist/hivesigner.min.js",
+  "browser": "dist/hivesigner.min.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && webpack",
+    "build": "rimraf dist && webpack && tsc",
     "test": "npx jest",
     "lint": "eslint ./src/**/*.ts"
   },
@@ -20,12 +21,13 @@
   },
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-typescript": "^7.1.0",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.9",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-typescript": "^7.13.0",
     "@hiveio/dhive": "^0.14.12",
     "@types/bytebuffer": "^5.0.42",
     "@types/jest": "^26.0.20",
@@ -34,25 +36,18 @@
     "@typescript-eslint/parser": "^4.15.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "browserify": "^17.0.0",
-    "common-shakeify": "^0.6.2",
     "eslint": "^7.20.0",
-    "gulp": "^4.0.2",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
-    "tsify": "^5.0.2",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
     "webpack": "^4.13.0",
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.9",
     "cross-fetch": "^3.0.6",
     "hive-uri": "^0.2.3"
   }
