--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hivesigner",
   "version": "3.2.4",
   "description": "Hivesigner SDK",
-  "main": "dist/hivesigner.js",
+  "main": "dist/hivesigner.min.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && gulp && tsc --emitDeclarationOnly",
+    "build": "rimraf dist && webpack",
     "test": "npx jest",
     "lint": "eslint ./src/**/*.ts"
   },
@@ -20,12 +20,20 @@
   },
   "homepage": "https://github.com/ecency/hivesigner-sdk#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-typescript": "^7.1.0",
     "@hiveio/dhive": "^0.14.12",
     "@types/bytebuffer": "^5.0.42",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
     "browserify": "^17.0.0",
     "common-shakeify": "^0.6.2",
     "eslint": "^7.20.0",
@@ -40,7 +48,9 @@
     "tslib": "^2.1.0",
     "typescript": "^4.1.5",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^4.13.0",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "cross-fetch": "^3.0.6",
