--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "module": "es2015",
+    "module": "commonjs",
     "target": "es5",
     "allowJs": false,
     "declaration": true,
