--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./lib/",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
@@ -11,5 +11,5 @@
     "declaration": true,
     "rootDir": "src"
   },
-  "exclude": ["./**/*.spec.ts", "jest.config.js", "gulpfile.js"]
+  "exclude": ["./**/*.spec.ts", "jest.config.js", "rollup.config.js"]
 }
